src/k8s-resource/service-nugetserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: nugetserver
  labels:
    app: nugetserver
spec:
  selector:
    app: nugetserver
  ports:
  - name: nugetserverpord
    port: 80
    targetPort: 80
