src/k8s-resource/ingress-nugetserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nugetserver
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  rules:
  - host: 139.217.100.118/nuget
    http:
      paths:
      - path: /nuget
        pathType: ImplementationSpecific
        backend:
          service:
            name: nugetserver
            port: 
              number: 80
